# sol-cerberus

./: .gitignore  .gitmodules  Anchor.toml  Makefile  README.md  deployment.md  development.md  package.json
programs/sol-cerberus/: Cargo.toml  README.md
programs/sol-cerberus/macros/: Cargo.toml  README.md
programs/sol-cerberus/macros/src/: lib.rs  macros.rs
programs/sol-cerberus/macros/src/macros/: rule.rs  sol_cerberus_accounts.rs
programs/sol-cerberus/macros/tests/: test_sol_cerberus_accounts.rs
programs/sol-cerberus/src/: constants.rs  errors.rs  instructions.rs  lib.rs  state.rs  utils.rs
programs/sol-cerberus/src/instructions/: add_rule.rs  allowed.rs  assign_role.rs  delete_app.rs  delete_assigned_role.rs  delete_rule.rs  initialize_app.rs  update_app.rs  update_authority.rs  update_cache.rs
programs/sol-cerberus/src/state/: app.rs  assigned_role.rs  role.rs  rule.rs
programs/sol-cerberus/src/utils/: app.rs  roles.rs  rules.rs  solana.rs  strings.rs  time.rs
tests/: 0_initialize_app.ts  1_add_rule.ts  1_initialize_app.ts  2_rules.ts  3_assign_roles.ts  4_check_permissions.ts  5_allow_assign_roles.ts  6_allow_add_rules.ts  common.ts  constants.ts  setup.ts
