[package]
name = "sol-cerberus"
version = "0.1.3"
description = "A fine grained Role-Based Access Control (RBAC) for enhanced security on Solana programs"
edition = "2021"
authors = ["Ander", "Micael"]
homepage = "https://solcerberus.com/"
repository = "https://github.com/AnderUstarroz/sol-cerberus"
documentation = "https://solcerberus.com/docs"
readme = "README.md"
keywords = ["solana", "acl"]
categories = ["authentication"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_cerberus"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features = ["metadata"] }
solana-program = "1.13.5"
mpl-token-metadata = { version = "1.8.3", features = ["no-entrypoint"] }
