[package]
name = "sol-cerberus"
version = "0.1.8"
description = "A fine grained Role-Based Access Control (RBAC) for enhanced security on Solana programs"
edition = "2021"
authors = ["Ander", "Micael"]
homepage = "https://solcerberus.com/"
repository = "https://github.com/AnderUstarroz/sol-cerberus"
documentation = "https://solcerberus.com/docs"
readme = "README.md"
keywords = ["solana", "acl"]
categories = ["authentication"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_cerberus"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
sol-cerberus-macros = { path = "./macros", version = "0.1.5" }
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.27.0", features = ["metadata"] }
solana-program = "1.15.2"
mpl-token-metadata = { version = "=1.9.1", features = ["no-entrypoint"] }
winnow = "=0.4.1"
