[package]
name = "sol-cerberus-macros"
version = "0.1.8"
description = "Rust macros to facilitate the integration of Sol Cerberus (RBAC) to Solana Anchor programs"
edition = "2021"
authors = ["Ander", "Micael"]
homepage = "https://solcerberus.com/"
repository = "https://github.com/AnderUstarroz/sol-cerberus"
documentation = "https://solcerberus.com/docs"
readme = "README.md"
keywords = ["solana", "acl"]
categories = ["authentication"]
license = "GPL-3.0-or-later"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.22", features = ["full"] }
quote = "1.0.28"
proc-macro2 = "1.0.63"
